<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddd"
    tools:context="com.example.flavorfull.flavorfull.SignUp">

    <Button
        android:id="@+id/cancel_button_sign_up"
        android:layout_width="331dp"
        android:layout_height="52dp"
        android:text="@string/action_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/submit_button_sign_up"
        android:layout_marginRight="8dp"
        app:layout_constraintVertical_bias="0.508"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        android:textColor="@color/buttonColor"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/submit_button_sign_up"
        android:layout_width="331dp"
        android:layout_height="52dp"
        android:text="@string/action_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="129dp"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/newPassword_sign_up"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        android:textColor="@color/buttonColor"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/newEmail_sign_up"
        android:layout_width="297dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/prompt_email"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/newPassword_sign_up"
        app:layout_constraintVertical_bias="0.549" />

    <EditText
        android:id="@+id/newUsername_sign_up"
        android:layout_width="297dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Username"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/newEmail_sign_up"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/newPassword_sign_up"
        app:layout_constraintVertical_bias="0.488" />

    <EditText
        android:id="@+id/newPassword_sign_up"
        android:layout_width="297dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Password"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.578"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
